# CP-Quad-LegTesting

./: CL_ROS2_new.sh  CL_router_start.sh  CLdeactivatezero.sh  CLdev.sh  CLfoxglove.sh  CLnew.sh  README.md  acados_ocp.json  controller.db  deactiveControl.sh  foxglove_info.txt  new.sh  rebuild.sh  routerconfig.json5  startup.sh  staticcontrol.sh  tune_ctrl.sh  zerocontrol.sh
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
bags/basic_imu_test/: metadata.yaml
bags/clean_imu/: clean_imu_0.mcap  metadata.yaml
bags/impulse_standing/: metadata.yaml
bags/impulse_standing2/: metadata.yaml
bags/motor_imu/: metadata.yaml
bags/rosbag2_2025_06_04-19_30_09/: metadata.yaml  rosbag2_2025_06_04-19_30_09_0.mcap
bags/static_imu_test/: metadata.yaml
install/bno08x_driver/lib/bno08x_driver/: bno08x_driver
install/bno08x_driver/share/bno08x_driver/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/imu_hardware_interface/include/imu_hardware_interface/: imu_hardware_interface.hpp
install/imu_hardware_interface/share/imu_hardware_interface/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/jetson_interface/lib/: libJetsonGPIO.so.1
install/jetson_interface/share/jetson_interface/: jetson_gpio_interface.xml  local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/py_pubsub/share/py_pubsub/: package.sh
install/quadruped_bringup/share/quadruped_bringup/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/quadruped_hardware/include/quadruped_hardware/: CANInterface.hpp  ROS2_CAN_Interface.hpp  ROS2_CAN_Motor.hpp  hex_utils.hpp
install/quadruped_hardware/share/quadruped_hardware/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh  ros2CANMotor_Description.xml
install/quadruped_mpc/lib/quadruped_mpc/: quadruped_teleop.py
install/quadruped_mpc/share/quadruped_mpc/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh  plugin_description.xml
install/quadruped_msgs/share/quadruped_msgs/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/quadruped_sim/share/quadruped_sim/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/imu_hardware_interface/: CMakeLists.txt  imu_hardware_interface.xml
src/imu_hardware_interface/src/: imu_hardware_interface.cpp
src/jetson_interface/: CMakeLists.txt
src/jetson_interface/include/quadruped_hardware/: jetson_gpio_interface.hpp  watchdog.hpp
src/jetson_interface/launch/: jetson.launch.py
src/jetson_interface/src/: jetson_gpio_interface.cpp  watchdog.cpp
src/py_pubsub/: package.xml  setup.py
src/py_pubsub/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/py_pubsub/log/: latest_build
src/quadruped_bringup/: CMakeLists.txt  package.xml
src/quadruped_bringup/config/: rviz.rviz
src/quadruped_bringup/launch/: real.launch.py  remote.launch.py
src/quadruped_hardware/: CMakeLists.txt
src/quadruped_hardware/config/: quadruped_hardware.yaml
src/quadruped_hardware/include/quadruped_hardware/: MotorDriver.hpp  ROS2_CAN_Motor.hpp
src/quadruped_hardware/launch/: controller_manager.launch.py
src/quadruped_hardware/src/: CANInterface.cpp  MotorDriver.cpp  ROS2_CAN_Motor.cpp  hex_utils.cpp
src/quadruped_mpc/: CMakeLists.txt  acados_ocp.json
src/quadruped_mpc/include/quadruped_mpc/acados_generated/: Makefile  acados_sim_solver_quadruped_ode.c  acados_solver.pxd  main_quadruped_ode.c  main_sim_quadruped_ode.c
src/quadruped_mpc/include/quadruped_mpc/acados_generated/quadruped_ode_model/: quadruped_ode_expl_vde_adj.c  quadruped_ode_expl_vde_forw.c
src/quadruped_mpc/include/quadruped_mpc/control_laws/: FootControl.hpp  StateEstimation.hpp
src/quadruped_mpc/include/quadruped_mpc/controller_interfaces/: gait_pattern_generator.hpp  state_estimator.hpp
src/quadruped_mpc/scripts/: gaitpattern_tests.py
src/quadruped_mpc/scripts/acados/: acados_ocp.json  generate_controller.py  optimal_controller.py  quadruped_model.py
src/quadruped_mpc/scripts/acados/logs/: simulation_data_20250113_215015.npz  simulation_data_20250113_215032.npz  simulation_data_20250209_190637.npz
src/quadruped_mpc/src/controller_interfaces/: balance_controller.cpp  foot_controller.cpp  gait_pattern_generator.cpp  state_estimator.cpp
src/quadruped_msgs/: CMakeLists.txt
src/quadruped_msgs/msg/: FootStates.msg
src/quadruped_sim/: CMakeLists.txt
src/quadruped_sim/config/: body_info.xml  topic_bridge.yaml
src/quadruped_urdf/: CMakeLists.txt  package.xml
src/quadruped_urdf/config/: initial_joint_positions.yaml  initial_joint_positions_real.yaml
src/quadruped_urdf/launch/: real_urdf.launch.py  sim_urdf.launch.py
src/quadruped_urdf/urdf/: QuadrupedURDF_sim.urdf.xacro  body.xacro  leg.xacro  materials.xacro  properties.xacro  quadruped_ros2_control.xacro  sensors.xacro
src/quadruped_utils/: CMakeLists.txt  EstopController.xml  StaticJointsController.xml  package.xml
src/quadruped_utils/config/: controller.yaml
src/quadruped_utils/include/quadruped_utils/: StaticJointsController.hpp  ZeroJointsController.hpp
src/quadruped_utils/launch/: StaticJoint.launch.py  testcontroller.launch.py
src/quadruped_utils/src/: EstopController.cpp  StaticJointsController.cpp  ZeroJointsController.cpp
src/rl12dof_urdf_description/: CMakeLists.txt
src/rl12dof_urdf_description/config/: FK_cmds.yaml  IK_cmds.yaml  impedance_force.yaml
src/rl12dof_urdf_description/launch/: FKTest.launch.py  IKTest.launch.py  real_urdf.launch.py
src/rl12dof_urdf_description/scripts/: FKTestNode.py  impedance_force_node.py  jacobian_numeric.py  safety.py
src/rl12dof_urdf_description/urdf/: rl12dof_URDF_real.urdf.xacro  rl12dof_links_joints.xacro  rl12dof_links_joints_hardware.xacro  rl12dof_ros2_control.xacro  rl12dof_urdf.gazebo.xacro  rl12dof_urdf.ros2control.xacro  rl12dof_urdf.xacro
(+176 files in other folders)
