cmake_minimum_required(VERSION 3.8)
project(rl12dof_urdf_description)

find_package(ament_cmake REQUIRED)

#############################
# Install Python Executables
#############################
install(PROGRAMS
  scripts/FKTestNode.py
  scripts/IKTestNode.py 
  scripts/impedance_force_node.py
  scripts/safety.py
  scripts/jacobian_numeric.py
  DESTINATION lib/${PROJECT_NAME}
)

#############################
# Install URDF / XACRO / Mesh / Config / Launch
#############################

# Install launch files
install(DIRECTORY launch/
  DESTINATION share/${PROJECT_NAME}/launch
)

# Install config files
install(DIRECTORY config/
  DESTINATION share/${PROJECT_NAME}/config
)

# Install URDF/Xacro files
install(DIRECTORY urdf/
  DESTINATION share/${PROJECT_NAME}/urdf
)

# Install meshes (if any)
install(DIRECTORY meshes/
  DESTINATION share/${PROJECT_NAME}/meshes
)

# Install world files
install(DIRECTORY worlds/
  DESTINATION share/${PROJECT_NAME}/worlds
)

ament_package()